<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string name="app_name">HelloAR Java</string>
  <string name="display_mesh">Display mesh</string>
  <string name="click_me">Click me</string>
  <string name="calibrate_mouth">Calibrate mouth</string>
  <string name="calibrate_face">Calibrate Face</string>
  <string name="continueCalibrateFace">Continue Calibration</string>
  <string name="continueCalibrateMouth">Continue Mouth Calibration</string>


  <string name="increaseSenOpenBtn">+OpenSen</string>
  <string name="decreaseSenOpenBtn">-OpenSen</string>
  <string name="increaseSenSlowBtn">+SlowSen</string>
  <string name="decreaseSenSlowBtn">-SlowSen</string>


</resources>
