<!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.ar.core.examples.java.helloar.HelloArActivity">

  <android.opengl.GLSurfaceView
      android:id="@+id/surfaceview"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_gravity="top"
      app:layout_constraintStart_toStartOf="@+id/vectorText"
      app:layout_constraintTop_toTopOf="parent" />


  <Button
      android:id="@+id/displayMeshBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onClickMeshBtn"
      android:text="@string/display_mesh"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0">

  </Button>

  <Button
      android:id="@+id/calibrateMouth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="1dp"
      android:layout_marginTop="649dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="21dp"
      android:onClick="onClickCalibrateMouth"
      android:text="@string/calibrate_mouth"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0">

  </Button>

  <Button
      android:id="@+id/clickMe"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onClickClickMe"
      android:text="@string/click_me"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.201"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.638">

  </Button>

  <LinearLayout
      android:id="@+id/drawCircleCanvas"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/vectorText"
      android:layout_width="318dp"
      android:layout_height="124dp"
      android:text="placeholder"
      android:textColor="#00C808"
      android:textSize="18sp"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="@+id/surfaceview"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.172"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/surfaceview"
      app:layout_constraintVertical_bias="0.886"
      tools:visibility="visible" />

  <Button
      android:id="@+id/increaseSenOpenBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onClickIncreaseOpenSen"
      android:text="@string/increaseSenOpenBtn"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.023" />

  <Button
      android:id="@+id/decreaseSlowSenBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onClickDecreaseSlowSen"
      android:text="@string/decreaseSenSlowBtn"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.05"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.109" />

  <Button
      android:id="@+id/decreaseOpenSenBtn"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:onClick="onClickDecreaseOpenSen"
      android:text="@string/decreaseSenOpenBtn"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.109" />

  <Button
      android:id="@+id/increaseSenSlowBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onClickIncreaseSlowSen"
      android:text="@string/increaseSenSlowBtn"

      app:layout_constraintBottom_toBottomOf="@+id/surfaceview"
      app:layout_constraintEnd_toEndOf="@id/increaseSenOpenBtn"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@id/decreaseSlowSenBtn"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.023" />

  <Switch
      android:id="@+id/simpleSwitch"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="164dp"
      android:layout_marginTop="704dp"
      android:onClick="onDebugSwitch"
      android:text="show debug"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/senText"
      android:layout_width="179dp"
      android:layout_height="80dp"
      android:layout_marginStart="116dp"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/touchInfo"
      android:layout_width="147dp"
      android:layout_height="94dp"
      android:layout_marginTop="176dp"
      android:text="TextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/yDifText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="264dp"
      android:layout_marginTop="216dp"
      android:text="TextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />




</android.support.constraint.ConstraintLayout>
